--- a/index.html
+++ b/index.html
@@ -114,7 +114,108 @@
         </div>
         <div class="courses">
             <div class="learning-title" style="text-align: center;">
-                Start learning
+                <div>Start learning</div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/images/course-software.jpg">
+                    <div class="card__content">
+                        <h2 class="card__title">Software engineering</h2>
+                        <div class="card__description">COURSES.</div>
+                        <div class="card__description">Web Development, Mobile Development, IOT, APIs.</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/course-computer-art.jpg">
+                    <div class="card__content">
+                        <h2 class="card__title">Computer art</h2>
+                        <div class="card__description">COURSES.</div>
+                        <div class="card__description">Web Development, Mobile Development, IOT, APIs.</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/course-design.jpg">
+                    <div class="card__content">
+                        <h2 class="card__title">Design</h2>
+                        <div class="card__description">COURSES.</div>
+                        <div class="card__description">Web Development, Mobile Development, IOT, APIs.</div>
+                    </div>
+                </div>
+            </div>
+            <div class="card-container">
+                <div class="card">
+                    <img src="assets/images/course-data.jpg">
+                    <div class="card__content">
+                        <h2 class="card__title">Data</h2>
+                        <div class="card__description">COURSES.</div>
+                        <div class="card__description">Web Development, Mobile Development, IOT, APIs.</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/course-business.jpg">
+                    <div class="card__content">
+                        <h2 class="card__title">Business</h2>
+                        <div class="card__description">COURSES.</div>
+                        <div class="card__description">Web Development, Mobile Development, IOT, APIs.</div>
+                    </div>
+                </div>
+                <div class="card">
+                    <img src="assets/images/course-marketing.jpg">
+                    <div class="card__content">
+                        <h2 class="card__title">Marketing</h2>
+                        <div class="card__description">COURSES.</div>
+                        <div class="card__description">Web Development, Mobile Development, IOT, APIs.</div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="thesis">
+            <div class="thesis-title">Thesis exhibit</div>
+            <div class="thesis-container">
+                <div class="thesis-left">
+                    <video src="assets/videos/thesis.mp4"></video>
+                    <div class="thesis-left-title">
+                        Reinmagine urban
+                    </div>
+                    <div class="thesis-left-description">
+                        <p>"Curabitur vitae libero in ipsum portitor consequat. Aliquam et
+                            commodo lectus, nec consequat neque. Sed non accumsan urna. Phasellus sed consequat ex.
+                            Etiam
+                            eget magna laoreet, effcitur dolor consequat, tristque ligula."</p>
+                    </div>
+                </div>
+                <div class="thesis-right">
+                    <div class="thesis-content-box">
+                        <div class="content-left">
+                            <div>
+                                <img src="assets/images/thesis-fisma.jpg">
+                            </div>
+                        </div>
+                        <div class="content-right">
+                            <div class="content-title">
+                                Fisma: Design and Prototype
+                            </div>
+                            <div class="content-description">
+                                Design showcase of new prototype product
+                            </div>
+                        </div>
+                    </div>
+                    <div class="thesis-content-box">
+                        <div class="content-left">
+                            <div>
+                                <img src="assets/images/thesis-now-and-then.jpg">
+                            </div>
+                        </div>
+                        <div class="content-right">
+                            <div class="content-title">
+                                Now and then
+                            </div>
+                            <div class="content-description">
+                                Reserach study about New York
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </div>
     </main>
