--- a/index.html
+++ b/index.html
@@ -27,6 +27,20 @@
                 </div>
             </div>
         </div>
+        <div class="mobile-navlist">
+            <div>
+                <img src="assets/images/ic-logo.svg">
+            </div>
+            <div>
+                <img src="assets/images/ic-on-campus.svg">
+            </div>
+            <div>
+                <img src="assets/images/ic-online.svg">
+            </div>
+            <div>
+                <img src="assets/images/ic-login.svg">
+            </div>
+        </div>
     </header>
     <main>
         <div class="hero">
@@ -219,6 +233,15 @@
             </div>
         </div>
     </main>
+    <div class="footer">
+        <div class="left-footer">
+            <div class="copyright">© 2016 Colmar Academy. All rights reserved</div>
+        </div>
+        <div class="right-footer">
+            <div >Terms</div>
+            <div >Privacy</div>
+        </div>
+    </div>
 </body>
 
 </html>
