--- a/index.html
+++ b/index.html
@@ -28,18 +28,10 @@
             </div>
         </div>
         <div class="mobile-navlist">
-            <div>
-                <img src="assets/images/ic-logo.svg">
-            </div>
-            <div>
-                <img src="assets/images/ic-on-campus.svg">
-            </div>
-            <div>
-                <img src="assets/images/ic-online.svg">
-            </div>
-            <div>
-                <img src="assets/images/ic-login.svg">
-            </div>
+            <div><img src="assets/images/ic-logo.svg"></div>
+            <div><img src="assets/images/ic-on-campus.svg"></div>
+            <div><img src="assets/images/ic-online.svg"></div>
+            <div><img src="assets/images/ic-login.svg"></div>
         </div>
     </header>
     <main>
@@ -238,8 +230,8 @@
             <div class="copyright">© 2016 Colmar Academy. All rights reserved</div>
         </div>
         <div class="right-footer">
-            <div >Terms</div>
-            <div >Privacy</div>
+            <div>Terms</div>
+            <div>Privacy</div>
         </div>
     </div>
 </body>
